<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvHomeFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VERIFIEZ VOTRE CAR"
            android:textSize="30sp"
            android:textColor="@color/lavender"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:id="@+id/Marque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Marque"
            android:inputType="textPersonName"
            android:layout_marginTop="50dp"/>
        <EditText
            android:id="@+id/vitesse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Vitesse"
            android:inputType="numberDecimal"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/etKilometrageDepart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ancien_KM"
            android:inputType="numberDecimal"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/etKilometrageArrivee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nouveau_KM"
            android:inputType="numberDecimal"
            android:layout_marginTop="50dp"/>


        <Button
            android:id="@+id/btnVerifEntretien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vérifier entretien"
            android:background="@color/lavender"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"

            android:layout_gravity="center_horizontal"/>
        <RadioGroup
            android:id="@+id/radioGroupCarburant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_below="@id/etKilometrageArrivee"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/rbEssence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Essence"
                android:checked="true"/> <!-- Par défaut, la voiture est considérée comme à essence -->

            <RadioButton
                android:id="@+id/rbDiesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diesel"/>
            <RadioButton
                android:id="@+id/rbElectrique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Electrique"/>
        </RadioGroup>

    </LinearLayout>
</RelativeLayout>
